@startuml

title __CONTROLLER's Class Diagram__\n


    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.MenuController {
            ~ log : String
            ~ login : TextField
            ~ pas : String
            ~ password : TextField
            - root : Parent
            - scene : Scene
            - stage : Stage
            + OpenForm()
            + initialize()
        }
      }
    }

  


    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.SysController {
            + table_view : TableView
            ~ addcou : TextField
            ~ addnb : TextField
            ~ addpo : TextField
            ~ col0 : TableColumn
            ~ col1 : TableColumn
            ~ col2 : TableColumn
            ~ col5 : TableColumn
            ~ nb : String
            ~ po : String
            - fxlist : ObservableList<RoomData>
            + initialize()
            + onDel()
            + onSef()
            - createtable()
            - updateSorts()
            - updateTable()
        }
      }
    }




    namespace om.example.demodao {
      namespace Controller {
        class com.example.demodao.Controller.TeachController {
            + table_view : TableView
            ~ Combowhere : ComboBox
            ~ a : String
            ~ b : String
            ~ col0 : TableColumn
            ~ col1 : TableColumn
            ~ col2 : TableColumn
            ~ col5 : TableColumn
            ~ wheretext : TextField
            - fxlist : ObservableList<RoomData>
            + initialize()
            + onWhere()
            + onWhere1()
            + test1()
            - createtable()
            - updateSorts()
            - updateTable()
        }
      }
    }

  

  com.example.demodao.Controller.MenuController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.SysController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.SysController o-- com.example.demodao.DAO.DAO : interDao
  com.example.demodao.Controller.SysController o-- com.example.demodao.DAO.ListP : lt
  com.example.demodao.Controller.TeachController .up.|> javafx.fxml.Initializable
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.DAO : dao
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.DAO : interDao
  com.example.demodao.Controller.TeachController o-- com.example.demodao.DAO.ListP : lt


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
